# client-server

./: .gitignore  CMakeLists.txt
client/include/: client.hpp
client/src/headers/: connection.hpp
client/src/sources/: client.cpp  connection.cpp  main.cpp
http_parser/include/: message.hpp  request.hpp  response.hpp
http_parser/src/sources/: message.cpp  request.cpp  response.cpp
server/include/: data_file.hpp  server.hpp
server/src/headers/: connection.hpp  request_manager.hpp
server/src/sources/: connection.cpp  data_file.cpp  request_manager.cpp  server.cpp  server_main.cpp
